<resources>
    <string name="app_name">Doku-Fitness</string>

    <string name="action_sign_in">Sign in or register</string>


    <string name="loginWithGoogle">To start, please login with your <u>Google-Account.</u></string>
    <string name="tool">Fitness-Tool</string>
    <string name="reps">Reps: %1$s</string>
    <string name="reps_text">Reps</string>
    <string name="sets">Sets: %1$s</string>
    <string name="sets_text">Sets</string>
    <string name="duration">Duration: %1$s</string>
    <string name="duration_text">Duration</string>
    <string name="select_tool">Select tool..</string>
    <string name="start_session">Start a session.</string>
    <string name="add_exercise">Add exercise</string>
    <string name="logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="continue_b"><b>Continue</b></string>
    <string name="back_b"><b>Back</b></string>
    <string name="click_to_add">Click to <b>Add</b></string>
    <string name="finish"><b>Finish</b></string>

    <!-- Font -->
    <string name="roboto_regular" translatable="false">sans-serif</string>
    <string name="roboto_light" translatable="false">sans-serif-light</string>
    <string name="roboto_condensed" translatable="false">sans-serif-condensed</string>
    <string name="roboto_thin" translatable="false">sans-serif-thin</string>
    <string name="roboto_medium" translatable="false">sans-serif-medium</string>

    <string name="number_picker_formatter" translatable="false">%02d</string>
    <string name="yes">Yes</string>
    <string name="closeApp">Do you really want to close the App?</string>
    <string name="deleteData">Do you really want to delete this activity?</string>
    <string name="no">No</string>
    <string name="exit">Quit</string>
    <string name="delete">Delete data</string>
    <string name="abortCreation">Do you really want to abort the creation of the activity?</string>
    <string name="abort">Abort</string>
    <string name="reps_and_sets">Reps and Sets</string>
    <string name="rating">Rating</string>
    <string name="edit_hl">Edit</string>
    <string name="backToMain">Back to Feed</string>


</resources>
