<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_900"
    android:orientation="vertical"
    android:padding="15dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView3"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_hl"
            android:textColor="@color/md_white_1000" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/oval"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/edit_tool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_mode_edit_black_24dp"
                android:padding="10dp"
                android:text="@string/tool"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000" />


            <Button
                android:id="@+id/edit_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_mode_edit_black_24dp"
                android:padding="10dp"
                android:text="@string/duration_text"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000" />

            <Button
                android:id="@+id/edit_reps_and_sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_mode_edit_black_24dp"
                android:padding="10dp"
                android:text="@string/reps_and_sets"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000" />

            <Button
                android:id="@+id/edit_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_mode_edit_black_24dp"
                android:padding="10dp"
                android:text="@string/rating"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000" />
        </LinearLayout>

        <Button
            android:layout_below="@+id/layout"
            android:id="@+id/backToMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/backToMain"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000" />

    </RelativeLayout>

</FrameLayout>