<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/oval"
    android:padding="5dp"
    android:orientation="vertical">


        <TextView
            android:id="@+id/fitnessTool"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tool"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration_text"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:np_dividerColor="@color/colorAccent"
                app:np_formatter="@string/number_picker_formatter"
                app:np_max="23"
                app:np_min="0"
                app:np_selectedTextSize="@dimen/selected_text_size"
                app:np_textSize="@dimen/text_size"
                app:np_typeface="@string/roboto_light"
                app:np_wrapSelectorWheel="true" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:np_dividerColor="@color/colorAccent"
                app:np_formatter="@string/number_picker_formatter"
                app:np_max="59"
                app:np_min="0"
                app:np_selectedTextSize="@dimen/selected_text_size"
                app:np_textSize="@dimen/text_size"
                app:np_typeface="@string/roboto_light"
                app:np_wrapSelectorWheel="true" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:np_dividerColor="@color/colorAccent"
                app:np_formatter="@string/number_picker_formatter"
                app:np_max="59"
                app:np_min="0"
                app:np_selectedTextSize="@dimen/selected_text_size"
                app:np_textSize="@dimen/text_size"
                app:np_typeface="@string/roboto_light"
                app:np_wrapSelectorWheel="true" />
        </LinearLayout>

</LinearLayout>