<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/oval"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/sets_text"
        android:textAlignment="center" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        app:np_dividerColor="@color/colorAccent"
        app:np_formatter="@string/number_picker_formatter"
        app:np_max="10"
        app:np_min="0"
        app:np_orientation="horizontal"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textSize="@dimen/text_size"
        app:np_typeface="@string/roboto_light"
        app:np_wrapSelectorWheel="false" />


    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sets"
        android:fadeScrollbars="false"
        android:paddingBottom="20dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/reps10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="100"
                    app:np_min="1"
                    app:np_orientation="vertical"
                    app:np_selectedTextSize="@dimen/selected_text_size"
                    app:np_textSize="@dimen/text_size"
                    app:np_typeface="@string/roboto_light"
                    app:np_wrapSelectorWheel="false" />
            </LinearLayout>

            <View
                android:id="@+id/scrollBarHelp"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/continueButtonReps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:background="@drawable/oval_primary"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="2dp"
        android:text="@string/click_to_continue"
        android:textAllCaps="false"
        android:textColor="@color/md_white_1000" />

</RelativeLayout>